fix(meta): update web meta

--- a/src/app.html
+++ b/src/app.html
@@ -21,15 +21,15 @@
 		<!-- Twitter -->
 		<meta name="twitter:image" content="/favicon.png" />
 		<meta name="twitter:site" content="@minatoaqua" />
-		<meta name="twitter:creator" content="@falcxxdev" />
+		<meta name="twitter:creator" content="@azukashiic" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="canonical" href="https://aqua.falcxxdev.cyou" />
+		<link rel="canonical" href="https://aqua.micin.life" />
 		<link rel="preload" href="%sveltekit.assets%/sveltekit_assets/aqua-portrait.webp" as="image" />
 		<script
 			async
 			defer
-			data-website-id="2066ca96-1127-4600-9265-d7c41b41da99"
-			src="https://umami.falcxxdev.cyou/script.js"
+			data-website-id="69f4c955-23c1-4f61-a93f-71d2f89222df"
+			src="https://umami.micin.life/script.js"
 		></script>
 		%sveltekit.head%
 	</head>
